cmake_minimum_required(VERSION 3.20)
project(esercitazione9)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wshadow -Werror=vla")


add_executable(depina_test 
    test_cycle_basis.cpp 
    cycle_basis.hpp 
    graph.hpp 
    adapter.hpp 
    algorithms.hpp
)
